--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title>Number Checker</title>
     <link rel="stylesheet" href="assets/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="assets/image/icon.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <header>
