--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <link rel="icon" href="assets/image/icon.png" type="image/x-icon" />
-    <title>Parash</title>
+    <title>Number Checker - Parash</title>
   </head>
   <body>
     <header>
